L3/A3-examples/correct-test-programs/temp/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
Rule 2     function_content -> assignment_statement
Rule 3     function_content -> while_stat
Rule 4     function_content -> if_stat
Rule 5     function_content -> assignment_statement function_content
Rule 6     function_content -> while_stat function_content
Rule 7     function_content -> if_stat function_content
Rule 8     function_content -> declaration
Rule 9     function_content -> declaration function_content
Rule 10    declaration -> INT varlist SEMICOLON
Rule 11    varlist -> NAME COMMA varlist
Rule 12    varlist -> NAME
Rule 13    varlist -> pointer COMMA varlist
Rule 14    varlist -> pointer
Rule 15    pointer -> ASTERISK pointer
Rule 16    pointer -> ASTERISK NAME
Rule 17    assignment_statement -> ID EQUAL RIGHT SEMICOLON
Rule 18    assignment_statement -> LEFT EQUAL expression SEMICOLON
Rule 19    ID -> NAME
Rule 20    LEFT -> ASTERISK var
Rule 21    RIGHT -> AMPERSAND var
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression ASTERISK expression
Rule 25    expression -> expression DIVIDE expression
Rule 26    expression -> var
Rule 27    expression -> NUMBERvar
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    NUMBERvar -> NUMBER
Rule 30    var -> ASTERISK var
Rule 31    var -> AMPERSAND var
Rule 32    var -> NAME
Rule 33    expression -> MINUS expression
Rule 34    code_block -> if_stat
Rule 35    code_block -> while_stat
Rule 36    code_block -> assignment_statement
Rule 37    code_block -> LBRACE function_content RBRACE
Rule 38    while_stat -> WHILE LPAREN b_expression RPAREN code_block
Rule 39    if_stat -> IF LPAREN b_expression RPAREN code_block
Rule 40    if_stat -> IF LPAREN b_expression RPAREN code_block ELSE code_block
Rule 41    b_expression -> expression sign1 expression
Rule 42    b_expression -> b_expression sign2 b_expression
Rule 43    b_expression -> LPAREN b_expression RPAREN
Rule 44    sign1 -> EQUALS
Rule 45    sign1 -> NOTEQUAL
Rule 46    sign1 -> GREATER
Rule 47    sign1 -> LESSER
Rule 48    sign1 -> GREATEREQ
Rule 49    sign1 -> LESSEREQ
Rule 50    sign2 -> LOGOR
Rule 51    sign2 -> LOGAND

Terminals, with rules where they appear

AMPERSAND            : 21 31
ASTERISK             : 15 16 20 24 30
COMMA                : 11 13
DIVIDE               : 25
ELSE                 : 40
EQUAL                : 17 18
EQUALS               : 44
GREATER              : 46
GREATEREQ            : 48
IF                   : 39 40
INT                  : 10
LBRACE               : 1 37
LESSER               : 47
LESSEREQ             : 49
LOGAND               : 51
LOGOR                : 50
LPAREN               : 1 28 38 39 40 43
MAIN                 : 1
MINUS                : 23 33
NAME                 : 11 12 16 19 32
NOTEQUAL             : 45
NUMBER               : 29
PLUS                 : 22
RBRACE               : 1 37
RPAREN               : 1 28 38 39 40 43
SEMICOLON            : 10 17 18
VOID                 : 1
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

ID                   : 17
LEFT                 : 18
NUMBERvar            : 27
RIGHT                : 17
assignment_statement : 2 5 36
b_expression         : 38 39 40 42 42 43
code_block           : 38 39 40 40
declaration          : 8 9
expression           : 18 22 22 23 23 24 24 25 25 28 33 41 41
function_content     : 1 5 6 7 9 37
if_stat              : 4 7 34
pointer              : 13 14 15
program              : 0
sign1                : 41
sign2                : 42
var                  : 20 21 26 30 31
varlist              : 10 11 13
while_stat           : 3 6 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE

    VOID            shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> VOID . MAIN LPAREN RPAREN LBRACE function_content RBRACE

    MAIN            shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> VOID MAIN . LPAREN RPAREN LBRACE function_content RBRACE

    LPAREN          shift and go to state 4


state 4

    (1) program -> VOID MAIN LPAREN . RPAREN LBRACE function_content RBRACE

    RPAREN          shift and go to state 5


state 5

    (1) program -> VOID MAIN LPAREN RPAREN . LBRACE function_content RBRACE

    LBRACE          shift and go to state 6


state 6

    (1) program -> VOID MAIN LPAREN RPAREN LBRACE . function_content RBRACE
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 16
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 7

    (19) ID -> NAME .

    EQUAL           reduce using rule 19 (ID -> NAME .)


state 8

    (38) while_stat -> WHILE . LPAREN b_expression RPAREN code_block

    LPAREN          shift and go to state 19


state 9

    (2) function_content -> assignment_statement .
    (5) function_content -> assignment_statement . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 2 (function_content -> assignment_statement .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 20
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 10

    (18) assignment_statement -> LEFT . EQUAL expression SEMICOLON

    EQUAL           shift and go to state 21


state 11

    (4) function_content -> if_stat .
    (7) function_content -> if_stat . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 4 (function_content -> if_stat .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 22
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 12

    (20) LEFT -> ASTERISK . var
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 23

state 13

    (8) function_content -> declaration .
    (9) function_content -> declaration . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 8 (function_content -> declaration .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 27
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 14

    (17) assignment_statement -> ID . EQUAL RIGHT SEMICOLON

    EQUAL           shift and go to state 28


state 15

    (39) if_stat -> IF . LPAREN b_expression RPAREN code_block
    (40) if_stat -> IF . LPAREN b_expression RPAREN code_block ELSE code_block

    LPAREN          shift and go to state 29


state 16

    (1) program -> VOID MAIN LPAREN RPAREN LBRACE function_content . RBRACE

    RBRACE          shift and go to state 30


state 17

    (3) function_content -> while_stat .
    (6) function_content -> while_stat . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 3 (function_content -> while_stat .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    while_stat                     shift and go to state 17
    function_content               shift and go to state 31
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 18

    (10) declaration -> INT . varlist SEMICOLON
    (11) varlist -> . NAME COMMA varlist
    (12) varlist -> . NAME
    (13) varlist -> . pointer COMMA varlist
    (14) varlist -> . pointer
    (15) pointer -> . ASTERISK pointer
    (16) pointer -> . ASTERISK NAME

    NAME            shift and go to state 32
    ASTERISK        shift and go to state 33

    varlist                        shift and go to state 34
    pointer                        shift and go to state 35

state 19

    (38) while_stat -> WHILE LPAREN . b_expression RPAREN code_block
    (41) b_expression -> . expression sign1 expression
    (42) b_expression -> . b_expression sign2 b_expression
    (43) b_expression -> . LPAREN b_expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 38
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    b_expression                   shift and go to state 37
    NUMBERvar                      shift and go to state 39
    var                            shift and go to state 40
    expression                     shift and go to state 41

state 20

    (5) function_content -> assignment_statement function_content .

    RBRACE          reduce using rule 5 (function_content -> assignment_statement function_content .)


state 21

    (18) assignment_statement -> LEFT EQUAL . expression SEMICOLON
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 43
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    var                            shift and go to state 40
    NUMBERvar                      shift and go to state 39
    expression                     shift and go to state 44

state 22

    (7) function_content -> if_stat function_content .

    RBRACE          reduce using rule 7 (function_content -> if_stat function_content .)


state 23

    (20) LEFT -> ASTERISK var .

    EQUAL           reduce using rule 20 (LEFT -> ASTERISK var .)


state 24

    (31) var -> AMPERSAND . var
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 45

state 25

    (30) var -> ASTERISK . var
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 46

state 26

    (32) var -> NAME .

    RPAREN          reduce using rule 32 (var -> NAME .)
    PLUS            reduce using rule 32 (var -> NAME .)
    MINUS           reduce using rule 32 (var -> NAME .)
    ASTERISK        reduce using rule 32 (var -> NAME .)
    DIVIDE          reduce using rule 32 (var -> NAME .)
    EQUALS          reduce using rule 32 (var -> NAME .)
    NOTEQUAL        reduce using rule 32 (var -> NAME .)
    GREATER         reduce using rule 32 (var -> NAME .)
    LESSER          reduce using rule 32 (var -> NAME .)
    GREATEREQ       reduce using rule 32 (var -> NAME .)
    LESSEREQ        reduce using rule 32 (var -> NAME .)
    SEMICOLON       reduce using rule 32 (var -> NAME .)
    LOGOR           reduce using rule 32 (var -> NAME .)
    LOGAND          reduce using rule 32 (var -> NAME .)
    EQUAL           reduce using rule 32 (var -> NAME .)


state 27

    (9) function_content -> declaration function_content .

    RBRACE          reduce using rule 9 (function_content -> declaration function_content .)


state 28

    (17) assignment_statement -> ID EQUAL . RIGHT SEMICOLON
    (21) RIGHT -> . AMPERSAND var

    AMPERSAND       shift and go to state 48

    RIGHT                          shift and go to state 47

state 29

    (39) if_stat -> IF LPAREN . b_expression RPAREN code_block
    (40) if_stat -> IF LPAREN . b_expression RPAREN code_block ELSE code_block
    (41) b_expression -> . expression sign1 expression
    (42) b_expression -> . b_expression sign2 b_expression
    (43) b_expression -> . LPAREN b_expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 38
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    b_expression                   shift and go to state 49
    NUMBERvar                      shift and go to state 39
    var                            shift and go to state 40
    expression                     shift and go to state 41

state 30

    (1) program -> VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE .

    $end            reduce using rule 1 (program -> VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE .)


state 31

    (6) function_content -> while_stat function_content .

    RBRACE          reduce using rule 6 (function_content -> while_stat function_content .)


state 32

    (11) varlist -> NAME . COMMA varlist
    (12) varlist -> NAME .

    COMMA           shift and go to state 50
    SEMICOLON       reduce using rule 12 (varlist -> NAME .)


state 33

    (15) pointer -> ASTERISK . pointer
    (16) pointer -> ASTERISK . NAME
    (15) pointer -> . ASTERISK pointer
    (16) pointer -> . ASTERISK NAME

    NAME            shift and go to state 52
    ASTERISK        shift and go to state 33

    pointer                        shift and go to state 51

state 34

    (10) declaration -> INT varlist . SEMICOLON

    SEMICOLON       shift and go to state 53


state 35

    (13) varlist -> pointer . COMMA varlist
    (14) varlist -> pointer .

    COMMA           shift and go to state 54
    SEMICOLON       reduce using rule 14 (varlist -> pointer .)


state 36

    (29) NUMBERvar -> NUMBER .

    PLUS            reduce using rule 29 (NUMBERvar -> NUMBER .)
    MINUS           reduce using rule 29 (NUMBERvar -> NUMBER .)
    ASTERISK        reduce using rule 29 (NUMBERvar -> NUMBER .)
    DIVIDE          reduce using rule 29 (NUMBERvar -> NUMBER .)
    EQUALS          reduce using rule 29 (NUMBERvar -> NUMBER .)
    NOTEQUAL        reduce using rule 29 (NUMBERvar -> NUMBER .)
    GREATER         reduce using rule 29 (NUMBERvar -> NUMBER .)
    LESSER          reduce using rule 29 (NUMBERvar -> NUMBER .)
    GREATEREQ       reduce using rule 29 (NUMBERvar -> NUMBER .)
    LESSEREQ        reduce using rule 29 (NUMBERvar -> NUMBER .)
    SEMICOLON       reduce using rule 29 (NUMBERvar -> NUMBER .)
    RPAREN          reduce using rule 29 (NUMBERvar -> NUMBER .)
    LOGOR           reduce using rule 29 (NUMBERvar -> NUMBER .)
    LOGAND          reduce using rule 29 (NUMBERvar -> NUMBER .)


state 37

    (38) while_stat -> WHILE LPAREN b_expression . RPAREN code_block
    (42) b_expression -> b_expression . sign2 b_expression
    (50) sign2 -> . LOGOR
    (51) sign2 -> . LOGAND

    RPAREN          shift and go to state 56
    LOGOR           shift and go to state 55
    LOGAND          shift and go to state 57

    sign2                          shift and go to state 58

state 38

    (43) b_expression -> LPAREN . b_expression RPAREN
    (28) expression -> LPAREN . expression RPAREN
    (41) b_expression -> . expression sign1 expression
    (42) b_expression -> . b_expression sign2 b_expression
    (43) b_expression -> . LPAREN b_expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 38
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    b_expression                   shift and go to state 59
    NUMBERvar                      shift and go to state 39
    var                            shift and go to state 40
    expression                     shift and go to state 60

state 39

    (27) expression -> NUMBERvar .

    PLUS            reduce using rule 27 (expression -> NUMBERvar .)
    MINUS           reduce using rule 27 (expression -> NUMBERvar .)
    ASTERISK        reduce using rule 27 (expression -> NUMBERvar .)
    DIVIDE          reduce using rule 27 (expression -> NUMBERvar .)
    EQUALS          reduce using rule 27 (expression -> NUMBERvar .)
    NOTEQUAL        reduce using rule 27 (expression -> NUMBERvar .)
    GREATER         reduce using rule 27 (expression -> NUMBERvar .)
    LESSER          reduce using rule 27 (expression -> NUMBERvar .)
    GREATEREQ       reduce using rule 27 (expression -> NUMBERvar .)
    LESSEREQ        reduce using rule 27 (expression -> NUMBERvar .)
    SEMICOLON       reduce using rule 27 (expression -> NUMBERvar .)
    RPAREN          reduce using rule 27 (expression -> NUMBERvar .)
    LOGOR           reduce using rule 27 (expression -> NUMBERvar .)
    LOGAND          reduce using rule 27 (expression -> NUMBERvar .)


state 40

    (26) expression -> var .

    PLUS            reduce using rule 26 (expression -> var .)
    MINUS           reduce using rule 26 (expression -> var .)
    ASTERISK        reduce using rule 26 (expression -> var .)
    DIVIDE          reduce using rule 26 (expression -> var .)
    EQUALS          reduce using rule 26 (expression -> var .)
    NOTEQUAL        reduce using rule 26 (expression -> var .)
    GREATER         reduce using rule 26 (expression -> var .)
    LESSER          reduce using rule 26 (expression -> var .)
    GREATEREQ       reduce using rule 26 (expression -> var .)
    LESSEREQ        reduce using rule 26 (expression -> var .)
    SEMICOLON       reduce using rule 26 (expression -> var .)
    RPAREN          reduce using rule 26 (expression -> var .)
    LOGOR           reduce using rule 26 (expression -> var .)
    LOGAND          reduce using rule 26 (expression -> var .)


state 41

    (41) b_expression -> expression . sign1 expression
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . ASTERISK expression
    (25) expression -> expression . DIVIDE expression
    (44) sign1 -> . EQUALS
    (45) sign1 -> . NOTEQUAL
    (46) sign1 -> . GREATER
    (47) sign1 -> . LESSER
    (48) sign1 -> . GREATEREQ
    (49) sign1 -> . LESSEREQ

    PLUS            shift and go to state 68
    MINUS           shift and go to state 70
    ASTERISK        shift and go to state 64
    DIVIDE          shift and go to state 62
    EQUALS          shift and go to state 65
    NOTEQUAL        shift and go to state 61
    GREATER         shift and go to state 71
    LESSER          shift and go to state 66
    GREATEREQ       shift and go to state 67
    LESSEREQ        shift and go to state 63

    sign1                          shift and go to state 69

state 42

    (33) expression -> MINUS . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 43
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    var                            shift and go to state 40
    expression                     shift and go to state 72
    NUMBERvar                      shift and go to state 39

state 43

    (28) expression -> LPAREN . expression RPAREN
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression ASTERISK expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . var
    (27) expression -> . NUMBERvar
    (28) expression -> . LPAREN expression RPAREN
    (33) expression -> . MINUS expression
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME
    (29) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 43
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    var                            shift and go to state 40
    expression                     shift and go to state 73
    NUMBERvar                      shift and go to state 39

state 44

    (18) assignment_statement -> LEFT EQUAL expression . SEMICOLON
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . ASTERISK expression
    (25) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 74
    PLUS            shift and go to state 68
    MINUS           shift and go to state 70
    ASTERISK        shift and go to state 64
    DIVIDE          shift and go to state 62


state 45

    (31) var -> AMPERSAND var .

    RPAREN          reduce using rule 31 (var -> AMPERSAND var .)
    PLUS            reduce using rule 31 (var -> AMPERSAND var .)
    MINUS           reduce using rule 31 (var -> AMPERSAND var .)
    ASTERISK        reduce using rule 31 (var -> AMPERSAND var .)
    DIVIDE          reduce using rule 31 (var -> AMPERSAND var .)
    EQUALS          reduce using rule 31 (var -> AMPERSAND var .)
    NOTEQUAL        reduce using rule 31 (var -> AMPERSAND var .)
    GREATER         reduce using rule 31 (var -> AMPERSAND var .)
    LESSER          reduce using rule 31 (var -> AMPERSAND var .)
    GREATEREQ       reduce using rule 31 (var -> AMPERSAND var .)
    LESSEREQ        reduce using rule 31 (var -> AMPERSAND var .)
    SEMICOLON       reduce using rule 31 (var -> AMPERSAND var .)
    LOGOR           reduce using rule 31 (var -> AMPERSAND var .)
    LOGAND          reduce using rule 31 (var -> AMPERSAND var .)
    EQUAL           reduce using rule 31 (var -> AMPERSAND var .)


state 46

    (30) var -> ASTERISK var .

    RPAREN          reduce using rule 30 (var -> ASTERISK var .)
    PLUS            reduce using rule 30 (var -> ASTERISK var .)
    MINUS           reduce using rule 30 (var -> ASTERISK var .)
    ASTERISK        reduce using rule 30 (var -> ASTERISK var .)
    DIVIDE          reduce using rule 30 (var -> ASTERISK var .)
    EQUALS          reduce using rule 30 (var -> ASTERISK var .)
    NOTEQUAL        reduce using rule 30 (var -> ASTERISK var .)
    GREATER         reduce using rule 30 (var -> ASTERISK var .)
    LESSER          reduce using rule 30 (var -> ASTERISK var .)
    GREATEREQ       reduce using rule 30 (var -> ASTERISK var .)
    LESSEREQ        reduce using rule 30 (var -> ASTERISK var .)
    SEMICOLON       reduce using rule 30 (var -> ASTERISK var .)
    LOGOR           reduce using rule 30 (var -> ASTERISK var .)
    LOGAND          reduce using rule 30 (var -> ASTERISK var .)
    EQUAL           reduce using rule 30 (var -> ASTERISK var .)


state 47

    (17) assignment_statement -> ID EQUAL RIGHT . SEMICOLON

    SEMICOLON       shift and go to state 75


state 48

    (21) RIGHT -> AMPERSAND . var
    (30) var -> . ASTERISK var
    (31) var -> . AMPERSAND var
    (32) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 76

state 49

    (39) if_stat -> IF LPAREN b_expression . RPAREN code_block
    (40) if_stat -> IF LPAREN b_expression . RPAREN code_block ELSE code_block
    (42) b_expression -> b_expression . sign2 b_expression
    (50) sign2 -> . LOGOR
    (51) sign2 -> . LOGAND

    RPAREN          shift and go to state 77
    LOGOR           shift and go to state 55
    LOGAND          shift and go to state 57

    sign2                          shift and go to state 58

state 50

    (11) varlist -> NAME COMMA . varlist
    (11) varlist -> . NAME COMMA varlist
    (12) varlist -> . NAME
    (13) varlist -> . pointer COMMA varlist
    (14) varlist -> . pointer
    (15) pointer -> . ASTERISK pointer
    (16) pointer -> . ASTERISK NAME

    NAME            shift and go to state 32
    ASTERISK        shift and go to state 33

    varlist                        shift and go to state 78
    pointer                        shift and go to state 35

state 51

    (15) pointer -> ASTERISK pointer .

    COMMA           reduce using rule 15 (pointer -> ASTERISK pointer .)
    SEMICOLON       reduce using rule 15 (pointer -> ASTERISK pointer .)


state 52

    (16) pointer -> ASTERISK NAME .

    COMMA           reduce using rule 16 (pointer -> ASTERISK NAME .)
    SEMICOLON       reduce using rule 16 (pointer -> ASTERISK NAME .)


state 53

    (10) declaration -> INT varlist SEMICOLON .

    WHILE           reduce using rule 10 (declaration -> INT varlist SEMICOLON .)
    IF              reduce using rule 10 (declaration -> INT varlist SEMICOLON .)
    INT             reduce using rule 10 (declaration -> INT varlist SEMICOLON .)
    NAME            reduce using rule 10 (declaration -> INT varlist SEMICOLON .)
    ASTERISK        reduce using rule 10 (declaration -> INT varlist SEMICOLON .)
    RBRACE          reduce using rule 10 (declaration -> INT varlist SEMICOLON .)


state 54

    (13) varlist -> pointer COMMA . varlist
    (11) varlist -> . NAME COMMA varlist
    (12) varlist -> . NAME
    (13) varlist -> . pointer COMMA varlist
    (14) varlist -> . pointer
    (15) pointer -> . ASTERISK pointer
    (16) pointer -> . ASTERISK NAME

    NAME            shift and go to state 32
    ASTERISK        shift and go to state 33

    varlist                        shift and go to state 79
    pointer                        shift and go to state 35

state 55

    (50) sign2 -> LOGOR .

    LPAREN          reduce using rule 50 (sign2 -> LOGOR .)
    MINUS           reduce using rule 50 (sign2 -> LOGOR .)
    ASTERISK        reduce using rule 50 (sign2 -> LOGOR .)
    AMPERSAND       reduce using rule 50 (sign2 -> LOGOR .)
    NAME            reduce using rule 50 (sign2 -> LOGOR .)
    NUMBER          reduce using rule 50 (sign2 -> LOGOR .)


state 56

    (38) while_stat -> WHILE LPAREN b_expression RPAREN . code_block
    (34) code_block -> . if_stat
    (35) code_block -> . while_stat
    (36) code_block -> . assignment_statement
    (37) code_block -> . LBRACE function_content RBRACE
    (39) if_stat -> . IF LPAREN b_expression RPAREN code_block
    (40) if_stat -> . IF LPAREN b_expression RPAREN code_block ELSE code_block
    (38) while_stat -> . WHILE LPAREN b_expression RPAREN code_block
    (17) assignment_statement -> . ID EQUAL RIGHT SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    LBRACE          shift and go to state 80
    IF              shift and go to state 15
    WHILE           shift and go to state 8
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12
